wip: condition js

--- a/assets/scss/cx-interface-builder.scss
+++ b/assets/scss/cx-interface-builder.scss
@@ -493,6 +493,10 @@ label.cherry-label{
 			padding-right: 0;
 		}
 	}
+
+	.cx-control-hidden {
+		display: none;
+	}
 }
 
 .cx-section.cx-scroll > .cx-section__holder > .cx-section__inner,
