--- a/assets/scss/controls/_switcher.scss
+++ b/assets/scss/controls/_switcher.scss
@@ -1,11 +1,9 @@
 .cx-switcher-wrap {
 	width: 54px;
 	height: 20px;
-	border-radius: 25px;
 	position: relative;
 	cursor: pointer;
 	user-select: none;
-	overflow: hidden;
 	background-color: white;
 
 	display: flex;
@@ -15,23 +13,27 @@
 
 	transform: translateZ(0);
 
-	&:after {
+	.bg-cover {
 		display: block;
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
+		background-color: #eceeef;
 		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
 		pointer-events: none;
 		border-radius: 25px;
 		content: '';
+		z-index: 1;
+		transition: all 0.4s ease;
+		transform: translateZ(0);
 	}
 
 	label {
 		display: block;
-		background-color: #eceeef;
-		transition: all 0.4s ease;
+
+		z-index: 2;
 
 		span {
 			font-size: 7px;
@@ -73,6 +75,7 @@
 		border-radius: 50%;
 		transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 		box-sizing: border-box;
+		z-index: 3;
 	}
 
 	.cx-input-switcher {
@@ -82,24 +85,26 @@
 	.cx-input-switcher-true:checked {
 
 		~ .sw-enable{
-			background-color: #49c66a;
-
 			span{
 				opacity: 1;
 				color: white;
 				text-shadow: 0 1px rgba(0, 0, 0, 0.2);
 			}
 		}
-		~ .sw-disable{
-			background-color: #49c66a;
 
+		~ .sw-disable{
 			span{
 				opacity: 0;
 			}
 		}
-		~ .state-marker{
+
+		~ .state-marker {
 			left: 100%;
 			margin-left: -19px;
+		}
+
+		~ .bg-cover {
+			background-color: #49c66a;
 		}
 	}
 }
