add: range labels to slider control

--- a/assets/scss/controls/_slider.scss
+++ b/assets/scss/controls/_slider.scss
@@ -7,6 +7,9 @@
 		flex: 0 1 10%;
 		min-width: 100px;
 		max-width: 200px;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
 	}
 
 	.cx-slider-holder{
