--- a/assets/scss/controls/_checkbox.scss
+++ b/assets/scss/controls/_checkbox.scss
@@ -1,22 +1,30 @@
+.cx-checkbox-item-wrap {
+	margin-bottom: 10px;
+}
+
 .cx-checkbox-item{
 	width: 20px;
 	height: 20px;
 	display: inline-block;
 	border-radius: $border_radius_extra_small;
 	margin-right: 10px;
-	margin-bottom: 10px;
 	cursor: pointer;
 	position: relative;
 	background-color: $grey_color_3;
 	user-select: none;
 	transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 
+	.rtl & {
+		margin-left: 10px;
+		margin-right: 0;
+	}
+
 	.marker{
 		position: absolute;
 		width: 20px;
 		height: 20px;
-		top: 0px;
-		left: 0px;
+		top: 0;
+		left: 0;
 		color: #fff;
 		font-size: 20px;
 		transition:inherit;
@@ -31,6 +39,7 @@
 }
 .cx-label-content {
 	display: flex;
+	align-items: center;
 }
 
 .cx-checkbox-input{
@@ -50,6 +59,11 @@
 	user-select: none;
 	&:focus{
 		outline: 1px solid rgba(41, 143, 252, .6);
-		box-shadow: 0px 0px 2px rgba(41,143,252,0.6);
+		box-shadow: 0 0 2px rgba(41,143,252,0.6);
 	}
+}
+
+.cx-checkbox-add-button {
+	@include link();
+	@include link_icon_before( '\f132' );
 }
