--- a/assets/scss/controls/_checkbox.scss
+++ b/assets/scss/controls/_checkbox.scss
@@ -7,7 +7,7 @@
 	height: 20px;
 	display: inline-block;
 	border-radius: $border_radius_extra_small;
-	margin-right: 10px;
+	margin: 0 10px 0 0;
 	cursor: pointer;
 	position: relative;
 	background-color: $grey_color_3;
@@ -15,8 +15,7 @@
 	transition: all 0.4s cubic-bezier(0.77, 0, 0.175, 1);
 
 	.rtl & {
-		margin-left: 10px;
-		margin-right: 0;
+		margin: 0 0 0 10px;
 	}
 
 	.marker{
