--- a/assets/scss/controls/_colorpicker.scss
+++ b/assets/scss/controls/_colorpicker.scss
@@ -17,7 +17,6 @@ $font_size: 14px;
 			width: 60px;
 			height: 26px;
 			padding: 0;
-			border: none;
 			margin: 0;
 			box-shadow: inset 0 0 0 3px white;
 			border: 1px solid #d5dadf;
@@ -36,9 +35,20 @@ $font_size: 14px;
 			margin: 1px 0;
 		}
 
+		.wp-picker-clear {
+			min-height: 30px;
+			margin: 0 0 0 6px;
+			.rtl & {
+				margin: 0 6px 0 0;
+			}
+		}
+
 		&.wp-picker-active {
 			.wp-color-result {
-				margin-right: 6px;
+				margin: 0 6px 0 0;
+				.rtl & {
+					margin: 0 0 0 6px;
+				}
 			}
 		}
 
