--- a/assets/scss/controls/_select.scss
+++ b/assets/scss/controls/_select.scss
@@ -67,6 +67,10 @@ select.select2-hidden-accessible{
 								color: $remove_color;
 								margin-right: 5px;
 								font-size: 14px;
+								.rtl & {
+									margin-left: 5px;
+									margin-right: 0;
+								}
 							}
 						}
 
