UPD: bump version to 1.6.4

--- a/assets/scss/controls/_colorpicker.scss
+++ b/assets/scss/controls/_colorpicker.scss
@@ -56,5 +56,14 @@ $font_size: 14px;
 			position: absolute;
 			z-index: 999;
 		}
+
+		.wp-picker-clear {
+			font-size: 0;
+			width: 30px;
+			background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='53.7' height='53.7' viewBox='0 0 53.7 53.7'><path fill='%23666E6E' d='M35.6 34.4L28 26.8l7.6-7.6c.2-.2.2-.5 0-.7l-.5-.5c-.2-.2-.5-.2-.7 0l-7.6 7.6-7.5-7.6c-.2-.2-.5-.2-.7 0l-.6.6c-.2.2-.2.5 0 .7l7.6 7.6-7.6 7.5c-.2.2-.2.5 0 .7l.5.5c.2.2.5.2.7 0l7.6-7.6 7.6 7.6c.2.2.5.2.7 0l.5-.5c.2-.2.2-.5 0-.7z'/></svg>");
+			background-repeat: no-repeat;
+			background-size: 130%;
+			background-position: center center;
+		}
 	}
 }
