--- a/assets/scss/controls/_select.scss
+++ b/assets/scss/controls/_select.scss
@@ -47,7 +47,7 @@ select.select2-hidden-accessible{
 					.select2-selection__rendered{
 						font-size: 12px;
 						line-height: 14px;
-						padding: 0;
+						padding: 2px;
 						display: block;
 
 						&:focus {
@@ -85,6 +85,7 @@ select.select2-hidden-accessible{
 								border: none;
 								box-shadow: none;
 								line-height: 19px;
+								min-height: auto;
 							}
 						}
 					}
