UPD: sync module ( 1.7.2 ) Repeater improvements, fix misc issues

--- a/assets/scss/controls/_repeater.scss
+++ b/assets/scss/controls/_repeater.scss
@@ -85,6 +85,7 @@
 				color: $dark_color_1;
 			}
 		}
+		&-copy,
 		&-remove {
 			position: absolute;
 			border: none;
@@ -98,20 +99,47 @@
 			text-decoration: none;
 			box-shadow: none;
 			outline: none;
-			top: 13px;
+			top: 15px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			&:hover {
+				color: $dark_color_1;
+			}
+
+			svg {
+				fill: currentColor;
+			}
+		}
+		&-remove {
 			right: 18px;
 			.rtl & {
 				left: 18px;
 				right: auto;
 			}
 			&:before {
-				content: "\f158";
-				transition: all 200ms linear;
-				font-family: dashicons;
-				vertical-align: middle;
+				content: none;
 			}
-			&:hover {
-				color: $dark_color_1;
+
+			.cx-tooltip {
+				width: 80px;
+			}
+
+			&__confirm,
+			&__cancel {
+				text-decoration: underline;
+			}
+
+			&__confirm {
+				color: $remove_color;
+			}
+		}
+		&-copy {
+			right: 48px;
+
+			.rtl & {
+				left: 48px;
+				right: auto;
 			}
 		}
 		&-title{
