--- a/assets/scss/cx-interface-builder.scss
+++ b/assets/scss/cx-interface-builder.scss
@@ -21,6 +21,7 @@ $max-height: 700px;
 @import "components/use-in-js";
 @import "components/variables";
 @import "components/mixins";
+@import "components/tooltip";
 
 @import "controls/button";
 @import "controls/checkbox";
