--- a/assets/scss/controls/_select.scss
+++ b/assets/scss/controls/_select.scss
@@ -119,8 +119,8 @@ select.select2-hidden-accessible{
 					.select2-results__option{
 
 						&[aria-selected=true]{
-							color: darken( $dark_color, 50% );
-							background-color: $dark_color;
+							//color: darken( $light_color, 50% );
+							//background-color: $dark_color;
 						}
 
 						&--highlighted{
