--- a/assets/scss/controls/_colorpicker.scss
+++ b/assets/scss/controls/_colorpicker.scss
@@ -29,6 +29,11 @@ $font_size: 14px;
 			&:after {
 				display: none;
 			}
+
+			.color-alpha {
+				width: 100% !important;
+				box-shadow: inset 0 0 0 3px white;
+			}
 		}
 
 		.wp-picker-input-wrap {
