--- a/assets/scss/controls/_iconpicker.scss
+++ b/assets/scss/controls/_iconpicker.scss
@@ -4,7 +4,7 @@
 		max-width: 100%;
 	}
 	.fixed &{
-		max-width: 150px;
+		max-width: 200px;
 	}
 	.input-group-addon {
 		position: absolute;
@@ -26,16 +26,14 @@
 			border-width: 0 0 0 1px;
 		}
 
-		.fa {
+		i {
 			line-height: 20px;
 		}
 	}
 	.cx-ui-text{
 		@include input();
-		padding: 0 0 0 30px;
-		.rtl & {
-			padding: 0 30px 0 0;
-		}
+		padding: 0;
+		padding-inline-start: 30px;
 	}
 }
 
@@ -103,14 +101,17 @@
 	padding: 0;
 }
 .iconpicker-popover.popover .popover-title {
-	padding: 14px;
+	padding: 10px;
 	font-size: 14px;
 	line-height: 16px;
 	border-bottom: 1px solid #ebebeb;
 	background-color: #f0f0f0;
 }
 .iconpicker-popover.popover .popover-title input[type=search].iconpicker-search {
+	@include input();
+	width: 100%;
 	margin: 0 0 2px 0;
+	background-color: #fff;
 }
 .iconpicker-popover.popover .popover-title-text ~ input[type=search].iconpicker-search {
 	margin-top: 14px;
@@ -292,9 +293,11 @@
 	font-size: 18px;
 	color: #444;
 	box-shadow: 0 0 0 1px #dddddd;
-	.fa {
+
+	i {
 		line-height: 28px;
 	}
+
 	.rtl & {
 		float: right;
 		margin: 0 0 7px 7px;
